-Added MMU information when viewing cpu registers on terminal console

Improved TBBlue emulation:
-Added emulation of tbblue joystick type (register 5)
-Added sprite zoom emulation
-Added relative sprites emulation
-Added sprite clipping emulation

Improved File Browser: added previews for screens (on .scr, .tap, .tzx, .pzx, .trd, .dsk, .sna, .sp, .z80, .p, .zsf)

Improved QL emulation:
-Added sound emulation
-Guessing of file name extension
-Show all registers on Debug CPU window
-Support ZSF snapshots

Improved Waveform window: Now can show left & right channels

Fixed QL bugs:
-Fixed loading QL Superbasic programs when line lenght usually longer than 128 bytes
-Fixed loading executable files, can even exec/exec_w files without QDOS header
-Fixed using QL system calls and A6 pointer offset used after previous Trap was not 4
-Fixed frame interrupt
-Fixed system call FS.SAVE
-Fixed system call FS.HEADS
-Fixed system call FS.HEADR
-Fixed system call IO.FSTRG
-Fixed system call IO.EDLIN
-Fixed system call IO.FCLOSE
-Fixed system call IO.DELET
-Fixed possible hang calling IO.SSTRG
-Fixed listing (dir) call
-Fixed cursor flashing
-Fixed RTC emulation
-Fixed reading keyboard when menu open

Fixed reading keys on SDL and X11 drivers with default keymap and machines QL, MSX and Spectravideo
Fixed restoring machine to msx, coleco, sg1000 and svi
Fixed showing last core frame time in Core Statistics window

Fixed segfaults when changing machines and having ZX Desktop windows opened
Fixed easter egg and cyrillic characters
Fixed segfaults when initializing audio and video drivers
Fixed rendering ZX Desktop on startup
Fixed arranging ZX Vision windows when changing machine or disabling border
Fixed panic screen extracting tap when invalid block
Fixed open error when extracting tap with Spectrum names with '/'



Version 9.0 - Turbo Esprit edition. 17 August 2020

Added new emulated machines: 
-MSX1 
-Spectravideo 318/328
-Colecovision 
-Sega SG-1000
